# LocalSend

./: .gitignore  .gitmodules  CMakeLists.txt  desktop.qml  devicelist.cpp  devicelist.h  main.cpp  mobile.qml  qml.qrc  resources.qrc  tcpclienthandler.cpp  tcpclienthandler.h  tcpserverhandler.cpp  tcpserverhandler.h  udphandler.cpp  udphandler.h
MaterialIcons/: MaterialIcon.qml
android/: AndroidManifest.xml
releaseFiles/mac/: Info.plist  LocalSend.icns
releaseFiles/windows/: windows.aps
